fixed responsive images and spacing on events

--- a/resources/assets/styles/layouts/_events.scss
+++ b/resources/assets/styles/layouts/_events.scss
@@ -24,7 +24,7 @@
   }
 
   .tribe-events-loop .type-tribe_events {
-    margin-bottom: 1em;
+    margin-bottom: 5em;
     padding: 0;
   }
 
@@ -141,6 +141,7 @@
   position: relative;
   color: $primary;
   margin-bottom: 30px;
+  margin-top: 0;
 
   &::before {
     position: absolute;
